Changed the font of all headings Changed the font size of all links Changed the colour of the text in ordered and unordered lists Moved links to Footer

--- a/style.css
+++ b/style.css
@@ -39,3 +39,14 @@ img {
   border: 1px solid blue;
   
 }
+h1, h2{
+  font-family:'Courier New', Courier, monospace
+}
+a{
+  font-size: 20px;
+}
+ol, ul{
+  color: bisque;
+  font-size: 20px;
+  padding: 10px;
+}
